kubernetes/apps/base/kube-system/cilium/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.haydenagencies.com.au/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hubble-ui
spec:
  hosts:
    - 'hubble.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: hubble-ui.kube-system.svc.cluster.local
